Fixed images not appearing on some

--- a/Brutalism.html
+++ b/Brutalism.html
@@ -46,11 +46,11 @@
       <br><p class="main-p">A “<strong>raw</strong> focus on content, and prioritization of the website visitor”, through basic interfaces components.</p>
     </div>
     <figure class="img-1-container">
-      <img src="/Volumes/BOLT/Uni stuff/IID Y1/Studio work/Visual Essay/Coded Site/Assets & componets/P5 - Brutalism/Brutalist-wireframe.jpg" alt="Image of a bare bones, brutalist website wireframe structure.">
+      <img src="Assets & componets/P5 - Brutalism/Brutalist-wireframe.jpg" alt="Image of a bare bones, brutalist website wireframe structure.">
       <figcaption>Basic Brutalist web wireframe</figcaption>
     </figure>
     <figure class="img-2-container">
-      <img src="Assets & componets/P5 - Brutalism/hehappening.us:.png" alt="Screenshot of a brutalist website with a disordered structure">
+      <img src="Assets & componets/P5 - Brutalism/hehappening.us.png" alt="Screenshot of a brutalist website with a disordered structure">
       <figcaption>hehappening.us</figcaption>
     </figure>
     <div class="para-1">
@@ -61,7 +61,7 @@
       <figcaption>HTML components at their most basic form</figcaption>
     </figure>
     <figure class="img-4-container">
-      <img src="Assets & componets/P5 - Brutalism/creativemarket.com:blog:90s-web-designs.gif" alt="Screenshot of an old-fashioned website from the 90s.">
+      <img src="Assets & componets/P5 - Brutalism/creativemarket.comblog90s-web-designs.gif" alt="Screenshot of an old-fashioned website from the 90s.">
       <figcaption>web design from the 90s, good old days...</figcaption>
     </figure>
     <div class="para-2">
@@ -72,7 +72,7 @@
       <figcaption>An ideal Brutalist colour palette</figcaption>
     </figure>
     <figure class="img-6-container">
-      <img src="Assets & componets/P5 - Brutalism/diss-list.com:.png" alt="Screenshot of diss-list.com brutalist website.">
+      <img src="Assets & componets/P5 - Brutalism/diss-list.com.png" alt="Screenshot of diss-list.com brutalist website.">
       <figcaption>diss-list.com</figcaption>
     </figure>
     <figure class="img-7-container">
