Fixed Aurélien's GIF not appearing

--- a/Conclusion.html
+++ b/Conclusion.html
@@ -91,7 +91,7 @@
           <div class="h1-line"></div>
         </div>
         <figure class="img-4-container">
-          <img src="Assets & componets/P6 - Conclusion/MacOS-interactions-by-Aurélien-Salomon.gif" alt="Futuristic concept of desktop interaction for the MacOS folder apps"/>
+          <img src="Assets & componets/P6 - Conclusion/MacOS-interactions-by-Aurélien-Salomon.gif" alt="Futuristic concept of desktop interaction for the MacOS folder apps"/>
           <figcaption>MacOS interactions by Aurélien Salomon</figcaption>
         </figure>
         <figure class="img-5-container">
